# dart-news

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: dart-digest.yml
dart_digest/: __init__.py  article_writer.py  cli.py  config.py  dart_client.py  market_filter.py  models.py  news_client.py  open_dart_client.py  pipeline.py  scoring.py  slack_client.py  storage.py
data/: company_map.csv  kospi_companies_sample.csv
scripts/: run_daily.sh  update_company_map.py
tests/: test_article_writer_template.py  test_market_filter.py  test_news_client.py  test_pipeline_dedup.py  test_scoring.py
