[project]
name = "dart-disclosure-insights"
version = "0.1.0"
description = "Automated deep-dive article generator for KOSPI DART disclosures"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex" }
]
dependencies = [
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[project.scripts]
dart-digest = "dart_digest.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dart_digest*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
